# DistFS-Distributed-Storage

./: DocInt.md  GEMINI.md  README.md  SRS_Distributed_Storage_Service.docx  change.txt  distfs_todo.txt  ds_project_impl.tex  task.md
Test_distfs/: Dockerfile  cluster.docker.conf  docker-compose.yml  run_test.sh  supervisor.sh  test_report.md
distfs/: .gitignore  CMakeLists.txt  README.md  cluster.conf  install_deps.sh  launch_laptop_a.sh  launch_laptop_b.sh  remote_cluster.conf  test2.txt
distfs/client/: chunker.cpp  chunker.hpp  downloader.cpp  main.cpp  uploader.cpp
distfs/common/: config.cpp  config.hpp  logger.hpp  sha256.cpp  sha256.hpp  types.hpp  wal.cpp  wal.hpp
distfs/metadata_server/: main.cpp  metadata_service.cpp  metadata_service.hpp  metadata_store.cpp  metadata_store.hpp
distfs/proto/: distfs.proto
distfs/raft/: raft_log.cpp  raft_log.hpp  raft_node.cpp  raft_node.hpp
distfs/storage_daemon/: chunk_store.cpp  chunk_store.hpp  heartbeat_client.cpp  heartbeat_client.hpp  main.cpp  storage_service.cpp  storage_service.hpp
distfs/tests/: test_chunker.cpp  test_raft.cpp  test_sha256.cpp  test_wal.cpp
docker_interactive/: Dockerfile  docker-compose.yml
